correção ajuste do paragrafo

--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
             <source class="video-mp4" src="video/video.mp4" type="video/mp4">
             
            </video>
-           <p>Créditos do Vídeo: https://www.youtube.com/watch?v=KCbPE5QDjk0</p>
+           <p style="margin-bottom: 30px;">Créditos do Vídeo: https://www.youtube.com/watch?v=KCbPE5QDjk0</p>
         </div>
       </div>
    </div>
 
-   <div class="container" style="background-color: #2A0741; margin-top: 30px;">
+   <div class="container" style="background-color: #2A0741;">
       <div class="content">
         <div >
             <h3 class="h3-rodape">Serviços com qualidade e garantia é o nosso foco!</h3>
